<resources>
    <string name="app_name">Lottery</string>
    <string name="str_follow">已关注</string>
    <string name="str_btn_follow">关注</string>
    <string name="str_find">发现</string>
    <string name="str_person">我</string>
    <string name="str_name">赌神一号</string>
    <string name="str_introduction">游戏介绍</string>
    <string name="str_publish">游戏公告</string>
    <string name="str_posibility">赔率介绍</string>
    <string name="str_history">下注历史</string>
    <string name="str_search">搜索</string>
    <string name="str_btn_send_message">发消息</string>
    <string name="str_unfollowed">不再关注</string>
    <string name="str_protest">投诉</string>
    <string name="str_btn_access">进入游戏</string>
    <string name="str_detail">查分明细</string>
    <string name="str_position">加拿大</string>
    <string name="str_go_follow">去关注</string>
    <string name="str_chat_content">在吗？</string>
    <string name="str_follow_content">赌神一号：无视赔半，4.6.2.1，每周2，4...</string>

    <!--登陆界面-->
    <string name="str_login_name">登陆</string>
    <string name="str_hint_login_phoneNumber">请输入账号</string>
    <string name="str_hint_login_password">请输入密码</string>
    <string name="str_login_register">马上注册</string>
    <string name="str_login_forger_psd">忘记密码</string>

    <!--注册界面-->
    <string name="str_hint_register_getCheckCode">获取验证码</string>
    <string name="str_hint_register_name">请输入你的昵称...</string>
    <string name="str_hint_register_password">请设置你的密码...</string>
    <string name="str_hint_register_password_again">再次输入你的密码...</string>
    <string name="str_hint_register_phoneNumber">请输入你的手机号码...</string>
    <string name="str_hint_register_code">请输入你的验证码...</string>
    <string name="str_register_goLogin">已有账号，去登陆</string>
    <string name="str_register_go">已有sssssss账号，去登陆</string>

    <!--游戏界面-->
    <string name="str_date">距离868561期截止</string>
    <string name="str_date_now">第868561期</string>
    <string name="str_deadline">02分58秒</string>
    <string name="str_fund">6.66金币</string>
    <string name="str_rest">余额</string>
    <string name="str_content_game">8+7+7=22(大双）</string>
    <string name="str_cathectic">下注</string>
    <string name="str_min_cathectic">最小下注</string>
    <string name="str_double_cathectic">双倍下注</string>
    <string name="str_introduction_possible">赔率说明</string>
    <string name="str_cathectic_price">下注金额:</string>

    <!--个人中心-->
    <string name="str_person_number">账号:</string>
    <string name="str_person_money">我的金币:</string>
    <string name="str_person_about_us">关于软件</string>
    <string name="str_person_install">设置</string>
    <string name="str_person_alter">修改</string>

    <!--游戏内容-->
    <string name="str_gameTitleTxt">猜数字</string>
    <string name="str_game3TitleTxt">特殊玩法</string>
    <string name="str_game2TitleTxt">大小单双</string>
    <string name="str_gameNumTxt">中奖号码：</string>
    <string name="str_gameNumContentTxt">[0,1,2,3,4,5]</string>
    
    <!--走势图-->
    <string name="str_history_trend">查看历史走势图</string>


</resources>
