<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorthirdgame"
    android:layout_height="match_parent">
    <TextView
        style="@style/GameTitleTxt"
        android:text="@string/str_game3TitleTxt"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/str_gameNumTxt"
            style="@style/GameNumTxt" />
        <TextView
            android:id="@+id/txt_game_num_content"
            android:text="@string/str_gameNumContentTxt"
            style="@style/GameNumContentTxt" />
    </LinearLayout>
    <GridView
        android:id="@+id/third_gridView"
        android:listSelector="#00000000"
        android:verticalSpacing="@dimen/space_s"
        android:layout_marginTop="@dimen/space_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2">
    </GridView>
</LinearLayout>