<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/colorBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_marginTop="@dimen/space_l"
            android:background="@color/colorWhite"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_marginTop="@dimen/space_s"
                android:layout_marginBottom="@dimen/space_s"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/space_l"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitXY"
                android:layout_width="@dimen/space_xxxl"
                android:layout_height="@dimen/space_xxxl" />

            <TextView
                android:layout_marginLeft="@dimen/space_xl"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_l"/>
        <LinearLayout
            android:background="@color/colorWhite"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                style="@style/fragment_person_tx"
                android:layout_weight="0.7"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="@string/str_person_number"
                 />
            <TextView
                android:paddingLeft="0dp"
                style="@style/fragment_person_tx"
                android:layout_weight="1.5"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="15768710136"
                />
            <TextView
                android:layout_weight="2"
                style="@style/fragment_person_tx"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/str_person_alter"
                android:textColor="@color/colorBule"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_xs"/>
        <LinearLayout
            android:background="@color/colorWhite"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                style="@style/fragment_person_tx"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="@string/str_person_money"
                />
            <TextView
                android:paddingLeft="0dp"
                style="@style/fragment_person_tx"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="666"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_xs"/>
        <TextView
            android:text="@string/str_person_about_us"
            style="@style/fragment_person_tx" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_xs"/>
        <TextView
            android:text="@string/str_person_install"
            style="@style/fragment_person_tx"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </RelativeLayout>

</LinearLayout>